@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.11.22-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-11-22 09:20:52, took 00:11:48, with 80 workers, on 3344 cases, 0 failed, 0 traces, 11 retries
+-;-;-;2023-11-22 14:22:19, took 00:16:23, with 80 workers, on 3344 cases, 0 failed, 0 traces, 8 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
