@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.11.22-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-11-22 09:20:52, took 00:11:48, with 80 workers, on 3344 cases, 0 failed, 0 traces, 11 retries<br/>
+tested: 2023-11-22 14:22:19, took 00:16:23, with 80 workers, on 3344 cases, 0 failed, 0 traces, 8 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
