@@ -14,7 +14,7 @@
 .bad { color: red }
 </style>
 <title>dataplanes</title></head><body>
-release: freeRouter-rare v23.11.21-cur, done by sprscc13@mr.n0b0dy.<br/>
+release: freeRouter-rare v23.11.22-cur, done by sprscc13@mr.n0b0dy.<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>udp</b></td><td><b>bmv2</b></td><td><b>dpdk</b></td><td><b>tofino</b></td><td><b>xdp</b></td><td><b>test</b></td></tr></thead><tbody>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl01.tst">p4lang-acl01.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=bad>not ok</td><td>p4lang: copp</td></tr>
@@ -499,4 +499,8 @@ release: freeRouter-rare v23.11.21-cur, done by sprscc13@mr.n0b0dy.<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout278.tst">p4lang-rout278.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=bad>not ok</td><td>p4lang: sdwan over ipv6 with l2tp3</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout279.tst">p4lang-rout279.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=bad>not ok</td><td>p4lang: sdwan over ipv4 with gre</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout280.tst">p4lang-rout280.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=good>ok</td><td class=bad>not ok</td><td>p4lang: sdwan over ipv6 with gre</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout281.tst">p4lang-rout281.tst</a></td><td class=good>ok</td><td class=bad>not ok</td><td class=good>ok</td><td class=bad>not ok</td><td class=bad>not ok</td><td>p4lang: sdwan over ipv4 with amt</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout282.tst">p4lang-rout282.tst</a></td><td class=good>ok</td><td class=bad>not ok</td><td class=good>ok</td><td class=bad>not ok</td><td class=bad>not ok</td><td>p4lang: sdwan over ipv6 with amt</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout283.tst">p4lang-rout283.tst</a></td><td class=good>ok</td><td class=bad>not ok</td><td class=good>ok</td><td class=bad>not ok</td><td class=bad>not ok</td><td>p4lang: sdwan over ipv4 with gtp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout284.tst">p4lang-rout284.tst</a></td><td class=good>ok</td><td class=bad>not ok</td><td class=good>ok</td><td class=bad>not ok</td><td class=bad>not ok</td><td>p4lang: sdwan over ipv6 with gtp</td></tr>
 </tbody></table></body></html>
