@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter-rare v23.11.21-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-11-22 02:50:22, took 00:09:19, with 60 workers, on 486 cases, 0 failed, 0 traces, 1 retries
+-;-;-;freeRouter-rare v23.11.22-cur, done by sprscc13@mr.n0b0dy.
+-;-;-;2023-11-22 14:30:31, took 00:07:55, with 60 workers, on 486 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl01.tst;p4lang-acl01.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl02.tst;p4lang-acl02.tst;success;p4lang: ingress access list
