@@ -14,8 +14,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter-rare v23.11.21-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-11-22 02:50:22, took 00:09:19, with 60 workers, on 486 cases, 0 failed, 0 traces, 1 retries<br/>
+release: freeRouter-rare v23.11.22-cur, done by sprscc13@mr.n0b0dy.<br/>
+tested: 2023-11-22 14:30:31, took 00:07:55, with 60 workers, on 486 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
